fix: loading not visible on some pages

--- a/styles/payroll/ui/Loading.scss
+++ b/styles/payroll/ui/Loading.scss
@@ -1,9 +1,5 @@
 @import '../mixins';
 
-.loading {
-  @include abs();
-}
-
 .wrap {
   @include centeredFlexWrap();
 }
